<resources>
    <string name="app_name">Wifi Analysis</string>
    <string name="title_card_network_info">Network Information</string>
    <string name="field_name_device_name">Device Name</string>
    <string name="field_name_device_type">Device Type</string>
    <string name="field_name_device_ip">Device IP</string>
    <string name="field_name_device_mac">Device MAC</string>
    <string name="field_name_vendor_name">Vendor Name</string>
    <string name="title_connected_devices">Connected Devices:</string>
    <string name="this_device">This device</string>
    <string name="error_network_not_found">Network not found</string>
    <string name="hideMacAddressDetails">Hide MAC Address Details</string>
    <string name="device_name">Device Name:</string>
    <string name="ip_address">IP Address:</string>
    <string name="mac_address">Mac Address:</string>
    <string name="network_information">Network Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_ports">Open ports</string>
    <string name="device_information">Device Information</string>
    <string name="university_of_babylon">University of Babylon</string>
    <string name="connected_devices">Connected Devices</string>
    <string name="password_checker">Password Checker</string>
    <string name="ports_statistics">Ports Statistics</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="refresh">Refresh</string>
    <string name="check_password">Check Password</string>
    <string name="password">Password</string>


</resources>