<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Group 1: Main Menu Items -->
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="none">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="Home" />

        <item
            android:id="@+id/connected_devices"
            android:icon="@drawable/ic_devices"
            android:title="@string/connected_devices" />
        <item
            android:id="@+id/ports_statistics"
            android:icon="@drawable/ic_port_statistic"
            android:title="@string/ports_statistics" />
        <item
            android:id="@+id/password_checker"
            android:icon="@drawable/ic_password_check"
            android:title="@string/password_checker" />

    </group>

</menu>
