<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hub.wifianalysis.ui.device_info.DeviceInfoViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_information"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:stretchColumns="*"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/field_name_device_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            <TextView
                                android:id="@+id/deviceNameTextView"
                                android:layout_width="wrap_content"
                                android:text="@{viewModel.state.deviceName}"
                                android:layout_height="wrap_content" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/field_name_device_ip"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            <TextView
                                android:id="@+id/deviceIpTextView"
                                android:layout_width="wrap_content"
                                android:text="@{viewModel.state.ipAddress}"
                                android:layout_height="wrap_content" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/field_name_device_mac"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            <TextView
                                android:id="@+id/deviceHwAddressTextView"
                                android:layout_width="wrap_content"
                                android:text="@{viewModel.state.mac}"
                                android:layout_height="wrap_content" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/field_name_vendor_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            <TextView
                                android:id="@+id/deviceVendorTextView"
                                android:layout_width="wrap_content"
                                android:text="@{viewModel.state.vendor}"
                                android:layout_height="wrap_content" />

                        </TableRow>


                    </TableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/open_ports"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_device_info" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>